--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "heroku -d build",
-    "heroku": "git push heroku main"
+    "deploy": "git push heroku main"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "/build"
+  "homepage": "/"
 }
