--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build && git add . && git commit -m `deploy fix`",
+    "predeploy": "npm run build && git add . && git commit ",
     "deploy": "git push heroku main"
   },
   "eslintConfig": {
@@ -39,5 +39,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://github.com/carloseur24/TodoTaskApp"
 }
