--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://github.com/carloseur24/TodoTaskApp",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build && git add . && git commit ",
-    "deploy": "git push heroku main"
+    "deploy": "git push heroku main",
+    "deploypg": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "/main"
+  }
 }
