--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "homepage": "https://github.com/carloseur24/TodoTaskApp",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node ./server.js",
+    "start2": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
