--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node ./server.js",
-    "start2": "react-scripts start",
+    "start2": "node ./server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
