--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": " serve -s build",
-    "start-dv": "react-scripts start",
+    "start-serve": " serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
